Fixed grid automatic spacing

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -7,17 +7,18 @@ body{
     content: "";
     position: absolute;
     height: 2em;
-    width: 22em;
+    width: 17em;
     background-color: #EEEE00;
     margin: -2em 0 0 -1em;
 }
 
 .post {
+    position: relative;
     font-family: cursive;
     border: 1em solid yellow;
     text-align: left;
-    width: 20em;
-    height: 20em;
+    width: 15em;
+    height: 15em;
     background-color: yellow;
 }
 
@@ -25,16 +26,17 @@ body{
     padding: 1em;
     background: url("../images/post_wall.jpg") repeat;
     width: 75vw;
-    height: 100%;
     display: grid;
-    grid-template-columns: 42.5% 0;
+    grid-template-columns: repeat(auto-fit, 18em);
+    grid-template-rows: repeat(auto-fit, 19em);
+    overflow: auto;
 }
 
 .link-container {
     padding: 1em;
     background: white;
     width: 25vw;
-    height: 100%;
     border-left: 1em solid black;
     border-right: 1em solid black;
+    border-bottom: 1em solid black;
 }
